--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 <title>Game of Life</title>
 
-<script src="/js/jquery.js"></script>
+<script src="/js/jquery-1.3.2.js"></script>
 <script src="/js/game-of-life.js"></script>
 
 <link rel="stylesheet" href="/css/style.css" />
 </head>
 
-<body></body>
+<body>&nbsp;</body>
 </html>
